--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   },
   "dependencies": {
     "gsap": "^3.10.3",
+    "lodash": "^4.17.21",
     "sass": "^1.50.0",
     "svelte-preprocess": "^4.10.5",
     "svelte-spa-router": "^3.2.0",
